--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-index HTML
+<!DOCTYPE html>
+<html>
+<head>
+<title>Sacode</title>
+</head>
+<body>
+
+<!-- header start -->
+<header>
+	<h1>SaCode</h1>
+	<p>Papua Coding School & Papua tech Community</p>
+</header>
+<!-- header end -->
+
+<!-- nav start -->
+<nav>
+	<a href="index.html">Home</a>
+	<a href="gallery.html">Gallery</a>
+	<a href="profile.html">Profile</a>
+	<a href="contact.html">Contact</a>
+</nav>
+<!-- nav end -->
+
+<!-- main content start -->
+<section>
+	MAIN CONTENT
+</section>
+<!-- main content end -->
+
+<!-- footer start -->
+<footer>
+	FOOTER
+</footer>
+<!-- footer end -->
+
+</body>
+</html>
+
+
